find inner attribute differences
As explained in issue #53, attributes of inner nodes are not (always) found. This change takes care of the test case.

--- a/rewrite/rewrite.html
+++ b/rewrite/rewrite.html
@@ -329,7 +329,12 @@
       if(difflist.length > 0) { return difflist; }
       // inner differences?
       var diff = this.findInnerDiff(t1, t2, route);
-      if(diff) { return [diff]; }
+      if(diff) { 
+        if(typeof diff.length === "undefined") { diff = [diff]; }
+        if (diff.length > 0) {
+          return diff;
+        } 
+      }
       // no differences
       return false;
     },
@@ -386,7 +391,6 @@
     findInnerDiff: function(t1, t2, route) {
       var subtrees = markSubTrees(t1, t2);
       var mappings = subtrees.length;
-
       // no correspondence whatsoever
       if(mappings === 0 && (t1.childNodes.length > 0 || t2.childNodes.length > 0)) {
         if (t1.childNodes.length === 1 && t2.childNodes.length === 1 && t1.childNodes[0].nodeType === 3 && t2.childNodes[0].nodeType === 3) {
@@ -450,6 +454,12 @@
               route: route.slice().push(i),
               element: e1.outerHTML
             });
+          }
+          if (e1.nodeType != 3 && e2.nodeType != 3) {
+             diff = this.findOuterDiff(e1, e2, route.slice().push(i));
+            if(diff) {
+              return diff;
+            }
           }
           diff = this.findInnerDiff(e1, e2, route.slice().push(i));
           if(diff) {
@@ -626,8 +636,8 @@
   <div id="t3">lol<span>y</span><ol><li>one</li><li>two</li></ol><p><i>tuff</i></p><span>l</span><hr></div>
   <div id="t4">lol<span>x</span><hr><ol><li>two</li><li>one</li></ol><p><i>huff</i></p></div>
 
-  <div id="t1">he<a>ll</a><i>u</i></div>
-  <div id="t2">he<a>ll</a><i>o</i></div>
+  <div id="t1">hello <span data-id="5">friend</span></div>
+  <div id="t2">hello <span data-id="6">friend</span></div>
 
   <script>
     var dd = new DOMdiff(),
